// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should have a table with single package data to install if one package was provided and not installed 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
  >
    Update package listing
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          barPackage
        </td>
        <td>
          foo
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          >
            Install
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have a table with single package data to install if one package was provided and uninstalled after clicking the button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
  >
    Update package listing
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          barPackage
        </td>
        <td>
          foo
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          >
            Install
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have a table with single package data to update if one package was provided and installed 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
  >
    Update package listing
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          barPackage
        </td>
        <td>
          foo
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          >
            Update
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          >
            Uninstall
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have a table with single package data to update if one package was provided and installed after clicking the button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
  >
    Update package listing
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          barPackage
        </td>
        <td>
          foo
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          >
            Update
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          >
            Uninstall
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have an empty table without package data 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
  >
    Update package listing
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;
